# llm-sql-converter

./: LICENSE.txt  README.md  memo.md  pyproject.toml
config/: rule.yaml
input/: sample_insert.sql  sample_insert_2.sql  sample_update.sql  sample_update_2.sql
langchain/langchain/: sample_vector.py
llm_sql_converter/: poc_sample.py
output/: sample_insert.sql  sample_insert_2.sql  sample_update.sql  sample_update_2.sql
